--- a/Barcode3/index.html
+++ b/Barcode3/index.html
@@ -9,9 +9,9 @@
 <meta name="description" content="Generate barcodes of nearly any type, scan it in the web browser, or download the generated images for free.">
 
 <link rel="icon" type="image/png" href="https://barcodeapi.org/static/favicon.png">
-<script src="./BarcodeAPI.org_files/index.js.download"></script>
-<link rel="stylesheet" type="text/css" href="./BarcodeAPI.org_files/flexboxgrid.min.css">
-<link rel="stylesheet" type="text/css" href="./BarcodeAPI.org_files/index.css">
+<script src="index.js.download"></script>
+<link rel="stylesheet" type="text/css" href="flexboxgrid.min.css">
+<link rel="stylesheet" type="text/css" href="index.css">
 </head>
 
 <body onload="loadHash(); init();">
