--- a/Barcode3/index.html
+++ b/Barcode3/index.html
@@ -9,7 +9,7 @@
 <meta name="description" content="Generate barcodes of nearly any type, scan it in the web browser, or download the generated images for free.">
 
 <link rel="icon" type="image/png" href="https://barcodeapi.org/static/favicon.png">
-<script src="index.js.download"></script>
+<script src="index.js"></script>
 <link rel="stylesheet" type="text/css" href="flexboxgrid.min.css">
 <link rel="stylesheet" type="text/css" href="index.css">
 </head>
