--- a/Barcode3/index.html
+++ b/Barcode3/index.html
@@ -29,7 +29,7 @@
 						<h4>
 							GOT FEEDBACK?
 							<br>
-							<span class="feedback">feedback@barcodeapi.org</span>
+							<span class="feedback">danchond@amazon.com</span>
 						</h4>
 					</div>
 					<div class="share-icon email">
@@ -52,13 +52,7 @@
 				<div class="barcode-types" id="topnav">
 					<a id="type-auto" onclick="setType(&#39;auto&#39;);" onmouseover="showCodeDescription(&#39;auto&#39;)" class="active">Auto</a>
 				<a id="type-e" rel="tooltip" class="top" onclick="setType(&quot;e&quot;)" title="A compact version of UPC-A which removes unneeded &#39;0&#39;s.">UPC_E</a><a id="type-a" rel="tooltip" class="top" onclick="setType(&quot;a&quot;)" title="Used as a product identifier in many countries, the 12 digit barcode allows information about manufacturer, product, variant, and additional store use codes.">UPC_A</a><a id="type-8" rel="tooltip" class="top" onclick="setType(&quot;8&quot;)" title="A UPC type barcode, derived from the longer EAN-13 code, for use on smaller pakages.">EAN8</a><a id="type-13" rel="tooltip" class="top" onclick="setType(&quot;13&quot;)" title="A globally recognized product identification code.">EAN13</a><a id="type-codabar" rel="tooltip" class="top" onclick="setType(&quot;codabar&quot;)" title="An early barode designed to be printer on dot-matrix printers.">CODABAR</a><a id="type-39" rel="tooltip" class="top" onclick="setType(&quot;39&quot;)" title="A basic alphanumeric barcode.">Code39</a><a id="type-128" rel="tooltip" class="top" onclick="setType(&quot;128&quot;)" title="A high desnisty alphanumeric barcode.">Code128</a><a id="type-aztec" rel="tooltip" class="top" onclick="setType(&quot;aztec&quot;)" title="A 2D data barcode whose timing markers radiate outward from the middle.">Aztec</a><a id="type-qr" rel="tooltip" class="top" onclick="setType(&quot;qr&quot;)" title="A 2D data barcode whose timing markers are aligned at the corners.">QRCode</a><a id="type-dm" rel="tooltip" class="top" onclick="setType(&quot;dm&quot;)" title="A 2D data barode whose timing markers are along the the edges.">DataMatrix</a><a id="type-417" rel="tooltip" class="top" onclick="setType(&quot;417&quot;)" title="A stacked linear barcode most commonly found on identification cards.">PDF417</a></div>
-				<div class="col-xs-8 bulk-upload">
-					<h4>Need more barcodes?</h4>
-					<a href="https://barcodeapi.org/bulk.html" class="text-link">
-						<img src="./BarcodeAPI.org_files/barcode.svg" class="icon-first">BULK BARCODE
-						GENERATOR<img src="./BarcodeAPI.org_files/chevron-right.svg" class="icon-last">
-					</a>
-				</div>
+				
 			</div>
 			<div class="display-barcode col-xs-12 col-sm-6">
 				<div id="frame">
