--- a/Barcode3/index.html
+++ b/Barcode3/index.html
@@ -33,7 +33,7 @@
 						</h4>
 					</div>
 					<div class="share-icon email">
-						<a href="mailto:feedback@barcodeapi.org?body=I%20love%20the%20new%20UI%21&amp;subject=Feedback%20about%20BarcodeAPI" target="_blank">
+						<a href="danchond@amazon.com?body=I%20love%20the%20new%20UI%21&amp;subject=Feedback%20about%20BarcodeAPI" target="_blank">
 							<img src="./BarcodeAPI.org_files/email.svg" alt="Share via Email" aria-label="Share Icon">
 						</a>
 					</div>
