--- a/Barcode3/index.html
+++ b/Barcode3/index.html
@@ -1,7 +1,7 @@
 
 <!-- saved from url=(0038)https://barcodeapi.org/index.html#auto -->
 <html><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
-<title>BarcodeAPI.org</title>
+<title>BCoder</title>
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
